--- a/template/index.html
+++ b/template/index.html
@@ -8,7 +8,7 @@
 
 {% block content %}
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
@@ -25,7 +25,20 @@
 <div class="imagen">
 </div>
 
-
+<div class="contenido">
+  <div class="descripcion">
+    <p class="fw-normal">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem, repellat! Quia beatae ipsa soluta saepe natus ea? Accusantium ducimus ab voluptatum possimus quidem quia labore distinctio, doloremque reprehenderit quis fugiat?
+    Quam velit, blanditiis aliquam aspernatur aperiam eaque numquam error aliquid harum itaque voluptates ab ullam corporis alias omnis. Quos eius facere velit commodi repellat ab expedita culpa possimus magnam temporibus!
+    Nulla, ratione architecto! Dolore sequi iure necessitatibus doloribus debitis excepturi praesentium beatae minus, voluptate ipsam similique architecto deleniti expedita consectetur unde aliquid reprehenderit quam earum ad. Cumque aliquid optio veniam.
+    Commodi repudiandae consectetur accusantium iste ullam maiores fugiat nostrum. Fugiat, rem! Illum eaque provident recusandae veritatis tempore asperiores, earum fuga sed dignissimos exercitationem, consequatur alias. Obcaecati ipsam ipsa quos officiis.
+    Quibusdam cupiditate iusto vero. Laborum, explicabo, inventore cumque molestiae autem alias natus similique odit quis asperiores maiores quam suscipit earum corrupti eius ullam dolor ipsum magni sapiente? Cum, omnis ducimus.
+    Dolorem, repudiandae corporis. Provident adipisci eius ipsa perferendis fuga nisi amet quisquam, esse animi alias rem magnam ipsum quas debitis? Mollitia, animi voluptas! Labore possimus illum voluptate rerum illo incidunt?
+    Omnis cumque harum vitae est nihil saepe et ullam neque suscipit, minima blanditiis, officia dolorum at odio culpa totam quia enim! Reprehenderit praesentium vero nulla blanditiis architecto, placeat repudiandae officia?
+    Harum fugit eveniet id tempora assumenda. Voluptas id reiciendis eius quos harum amet doloribus voluptate! Mollitia illum fugiat obcaecati inventore placeat. Sequi hic iure dolor qui neque exercitationem aspernatur officiis?
+    Quas quisquam quod autem molestias fugiat in quam sed veniam repellendus ut, impedit nihil deserunt, odio nisi amet incidunt dolorem minima illum commodi sit sunt nesciunt! Odit sapiente sequi a?
+    Possimus minima distinctio quisquam excepturi similique omnis tenetur voluptates, iste temporibus consequatur quos. Saepe rem pariatur iusto tenetur aspernatur, voluptates amet, laudantium consectetur cupiditate assumenda sed, hic id accusantium illum.</p>
+  </div>
+</div>
 
 
 {% endblock %}
